tests/fixtures/realworld/istio/valid/case-033-RW-8-88-ServiceEntry-empty-endpoints-item-fails.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: empty-endpoint-item
  namespace: default
spec:
  hosts:
  - example.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: ""
    ports:
      http: 8080
